# qunity

./: .gitignore  .gitmodules  Cargo.toml  lol.q  readings  requirements.txt  timeline
ocaml_qunity/: dune-project  ocaml_qunity.opam
ocaml_qunity/lib/: dune  fake.ml  openqasm.ml  qunity.ml  symtab.ml  typing.ml  v.ml
ocaml_qunity/test/: dune
qunipy/: quni.py
references/: deutsch.hs  mixed_type_check.hs  mixed_type_check.ml  mixed_type_check.mli  prog_type_check.hs  prog_type_check.ml  prog_type_check.mli  pure_type_check.hs  qft.hs  readme.md
references/qunity-main/: .gitignore  CITATION.cff  Makefile  README.md  _CoqProject  shell.nix
references/qunity-main/src/: Contexts.v  Lists.v  Reals.v  Sets.v  Syntax.v  Tactics.v  Typechecking.v  Types.v  Typing.v
references/qunity-main/src/examples/: Deutsch.v  DeutschJozsa.v  Fourier.v  QList.v  Walk.v
src/: main.rs  parser.rs
src/nom_parser/: mod.rs
src/openqasm/: mod.rs
src/pest_parser/: example  grammar.pest  mod.rs  typer.rs  typetree.rs
